# efm32pg1b-hal

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config  config.toml
examples/: cmu.rs  dma.rs  em_exti.rs  embassy_button.rs  embassy_example.rs  gpio.rs  gpio_exti.rs  spi.rs  spi_lcd.rs  timer.rs  timer_le.rs
src/: cmu.rs  gpio.rs  lib.rs  spi.rs  timer.rs  timer_le.rs  usart.rs
src/dma/: mod.rs
src/gpio/: debug.rs  dynamic.rs  efemb.rs  erased.rs  exti.rs  mod.rs  pin.rs  port.rs
src/timer_le/: efemb.rs  mod.rs
src/usart/: mod.rs
src/usart/spi/: mod.rs
tests/: spi_lcd_test.rs
