[package]
name = "efm32pg1b-hal"
version = "0.1.1"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
edition = "2018"
description = "Hardware abstraction layer (HAL) for Silicon Labs EFM32PG1B microcontrollers"
keywords = ["embedded-hal", "efm32", "efm32pg1b", "hal", "silabs"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/BogdanOlar/efm32pg1b-hal"

[dependencies]
efm32pg1b-pac = { version = "0.2.7", features = [
    "critical-section",
    "rt",
    "defmt",
] }
embedded-hal = { version = "1" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
fugit = { version = "0.3.7", features = ["defmt"] }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
document-features = "0.2"

[features]
## Implementation of `defmt::Format` for public enums and structures. See [defmt](https://crates.io/crates/defmt)
defmt = ["dep:defmt", "dep:defmt-rtt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
codegen-units = 1             # better optimizations
debug = true                  # symbols are nice and they don't increase the size on Flash
lto = false                   # better optimizations
required-features = ["defmt"]

[[example]]
name = "cmu"
required-features = ["defmt"]

[[example]]
name = "gpio"
required-features = ["defmt"]

[[example]]
name = "spi"
required-features = ["defmt"]

[[example]]
name = "spi_lcd"
required-features = ["defmt"]

[dev-dependencies]
# Be able to print out types in `embedded-hal` when running the examples
embedded-hal = { version = "1", features = ["defmt-03"] }
defmt-rtt = { version = "0.4" }
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
ls013b7dh03 = { version = "0.2" }
# ls013b7dh03 = { path = "../ls013b7dh03" }
