[package]
name = "efm32pg1b-hal"
version = "0.1.2"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
edition = "2021"
description = "Hardware abstraction layer (HAL) for Silicon Labs EFM32PG1B microcontrollers"
keywords = ["embedded-hal", "efm32", "efm32pg1b", "hal", "silabs"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/BogdanOlar/efm32pg1b-hal"

[dependencies]
efm32pg1b-pac = { version = "0.4.0", features = [
    "critical-section",
    "rt",
    "defmt",
] }
embedded-hal = { version = "1" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
fugit = { version = "0.3.7", features = ["defmt"] }


# dependencies when using the log/defmt feature
log = { version = "0.4.20", optional = true }
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.0", optional = true }
rtt-target = { version="0.6.1", optional= true }

panic-probe = { version = "1.0", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
document-features = "0.2.10"

[dev-dependencies]
#  Be able to print out types in `embedded-hal` when running the examples
embedded-hal = { version = "1", features = ["defmt-03"] }
embedded-graphics = { version = "0.8" }
# ls013b7dh03 = { version = "0.4", features = ["embedded_graphics"] }
ls013b7dh03 = { path = "../ls013b7dh03", features = ["embedded_graphics"] }
# Integration Testing
embedded-test = { version = "0.6.2", features = ["defmt"]}

[features]
default = []
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
defmt = ["dep:defmt", "dep:defmt-rtt", "dep:rtt-target", "rtt-target/defmt", "embedded-test/defmt"]

## Allow changing the function of the debug pins (Pins 0-3 of port `F`)
use_debug_pins = []

## QFN32 without DC-DC GPIO. Pick EITHER this feature, or `qfn48`, or none of the two!
qfn32 = []
## QFN48 with DC-DC GPIO. Pick EITHER this feature, or `qfn32`, or none of the two!
qfn48 = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
codegen-units = 1             # better optimizations
debug = true                  # symbols are nice and they don't increase the size on Flash
lto = false                   # better optimizations
required-features = ["defmt", "qfn48"]

[[example]]
name = "cmu"
required-features = ["defmt"]

[[example]]
name = "gpio"
required-features = ["defmt", "qfn48"]

[[example]]
name = "spi"
required-features = ["defmt", "qfn48"]

[[example]]
name = "spi_lcd"
required-features = ["defmt", "qfn48"]

[[example]]
name = "timer"
required-features = ["defmt"]

[[example]]
name = "timer_le"
required-features = ["defmt"]

[[test]]
name = "spi_lcd_test"
harness = false

