[package]
name = "efm32pg1b-hal"
version = "0.1.2"
authors = ["Bogdan Olar <olar.bogdan.dev@gmail.com>"]
edition = "2021"
description = "Hardware abstraction layer (HAL) for Silicon Labs EFM32PG1B microcontrollers"
keywords = ["embedded-hal", "efm32", "efm32pg1b", "hal", "silabs"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/BogdanOlar/efm32pg1b-hal"

[package.metadata.docs.rs]
# config for `document-features`
# FIXME: how the heck do you get `cargo doc` to see the `efemb.rs` modules that are only compiled if "efemb" is enabled!?
# features = ["defmt", "qfn48", "efemb", "efemb-timdrv-letim0-hz-32_768"]
all-features = true     # enable all features when creating the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
efm32pg1b-pac = { version = "0.4.2", features = ["critical-section","rt","defmt"] }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version="1.0", optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
critical-section = { version = "1.2.0"}
panic-halt = "1.0.0"
fugit = { version = "0.3.9", features = ["defmt"] }
document-features = { version = "0.2", optional = false }
#! ### Optional dependencies
log = { version = "0.4.29", optional = true }
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.0", optional = true }
rtt-target = { version="0.6.1", optional= true }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time-driver = { version = "0.2.2", optional = true}
embassy-time-queue-utils = { version = "0.3.0", optional = true }
embassy-sync = { version = "0.7.2", optional = true}

[dev-dependencies]
#  Be able to print out types in `embedded-hal` when running the examples
embedded-hal = { version = "1", features = ["defmt-03"] }
embedded-graphics = { version = "0.8.1" }
# ls013b7dh03 = { version = "0.4", features = ["embedded_graphics"] }
ls013b7dh03 = { path = "../ls013b7dh03", features = ["embedded_graphics"] }
# Integration Testing
embedded-test = { version = "0.7.0", features = ["defmt"]}
# embassy
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"]}
embassy-time = { version = "0.5.1"}

[features]
default = []
## Allow changing the function of the debug pins (`PF0`, `PF1`,`PF2`,`PF3`)
use_debug_pins = []
# Controller package options. Pick either *ONE* of the features , or *NONE*.
## Controller package QFN32 without DC-DC GPIO.
qfn32 = []
## Controller package QFN48 with DC-DC GPIO.
qfn48 = []
# Embassy
## Embassy support for `efm32`
efemb = [
    "dep:embassy-sync",
    "dep:embassy-time-queue-utils",
    "dep:embassy-time-driver",
    "dep:embedded-hal-async"
]
# Embassy time driver
## Use LeTimer0 as embassy timer base, with 32768 Hz tick rate, and specify the tick rate to the `embassy-time-driver`
efemb-timdrv-letim0-hz-32_768 = ["embassy-time-driver/tick-hz-32_768"]
## Use LeTimer0 as embassy timer base, with 1000 Hz tick rate, and specify the tick rate to the `embassy-time-driver`
efemb-timdrv-letim0-hz-1_000 = ["embassy-time-driver/tick-hz-1_000"]
# Debug pins showing when interrupt and schedule function are executed
efemb-timdrv-letim0-dbg-pins = []
# Debugging options. Pick either *ONE* of the features , or *NONE*.
## Use `log` crate for debugging
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
## Use `defmt` for debugging
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:rtt-target",
    "rtt-target/defmt",
    "embedded-test/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime-us"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better link time optimizations

[profile.dev]
codegen-units = 1             # better optimizations
debug = true                  # symbols are nice and they don't increase the size on Flash
lto = true
required-features = ["defmt", "qfn48"]

[[example]]
name = "cmu"
required-features = ["defmt"]

[[example]]
name = "em_exti"
required-features = ["defmt", "qfn48"]

[[example]]
name = "embassy_button"
required-features = ["efemb"]

[[example]]
name = "embassy_example"
# required-features = ["efemb", "efemb-timdrv-letim0-hz-32_768", "efemb-timdrv-letim0-dbg-pins"]
required-features = ["efemb", "efemb-timdrv-letim0-hz-32_768"]
# required-features = ["efemb", "efemb-timdrv-letim0-hz-1_000"]

[[example]]
name = "gpio"
required-features = ["defmt", "qfn48"]

[[example]]
name = "gpio_exti"
# enabling "efemb" and "efemb-timdrv-letim0-hz-32_768" features in order to enable defmt timestamps
required-features = ["defmt", "qfn48", "efemb", "efemb-timdrv-letim0-hz-32_768"]

[[example]]
name = "spi"
required-features = ["defmt", "qfn48"]

[[example]]
name = "spi_lcd"
required-features = ["defmt", "qfn48"]

[[example]]
name = "timer"
required-features = ["defmt"]

[[example]]
name = "timer_le"
required-features = ["defmt"]

[[test]]
name = "spi_lcd_test"
harness = false

